@@ -7,6 +7,7 @@
 - 2020-05-30                                -
 ---------------------------------------------
 .: WSW: Task: Update shop page layout (WSW-2)
+.: WSW: Task: Update favorite page (WSW-7)
 
 ---------------------------------------------
 - 2020-05-29                                -
